Fixed memory leaks
Fixed bad charsets

Updated to Gradle 7

Updated to FMT 1.2.7